# peripherals_led

./: CMakeLists.txt  README.md  test.yaml
example/: test_led_generic.c  test_led_ws2812.c
include/: led.h
src/: led_core.c  led_core.h
src/drivers/: drv_generic.c  drv_spi_ws2812.c
test/: test_led_generic.c
tests/: test_hw_led_generic_smoke.sh  test_led_api_contract.c  test_led_api_contract.sh
